# bike-parking

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  airflow_performance.ipynb  docker-compose.yml  pipeline_analysis.ipynb  pyproject.toml  secrets.env.example  settings.env
.github/workflows/: deploy.yml
.ipynb_checkpoints/: pipeline_analysis-checkpoint.ipynb
app/: current.py  health.py  history.py  main.py  shared.py
app/config/: groups.yaml
app/frontend/: app.js  index.html  map.html  styles.css
data_pipeline/: db_connection.py  db_setup.py  ingest.py  ingest_data.py  init_airflow_db.py  starter_data.py  utils.py
data_pipeline/dags/: citibike_dbt_current.py  citibike_dbt_dag.py  citibike_ingest_dag.py
data_pipeline/dbt/: dbt_project.yml  profiles.yml
data_pipeline/dbt/models/consumption/: con_station_availability_history.sql  con_station_expected_wait_times.sql  con_station_status_current.sql
data_pipeline/dbt/models/staging/: sources.yml  stg_station_information.sql  stg_station_status.sql
nginx/: bike-parking
scripts/: patch_data.py
setup_scripts/: deploy.sh
tests/: test_api.py  test_robustness.py
